fix scrollbar showing on chrome

--- a/front/src/app.css
+++ b/front/src/app.css
@@ -20,6 +20,10 @@
     -webkit-font-smoothing: antialiased !important; 
 }
 
+*::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     margin: 0;
     background-image: url('/images/bg.svg');
